# BinanceDataDownloader

./: .gitignore  .python-version  README.md  config.yaml  main.py  pyproject.toml
data_reader/: enums.py  reader.py
data_transformer/: aggtrades_to_kline.py
downloader/: downloader.py  enums.py  my_gospeed_api.py  release.py
utils/: __init__.py  config_loader.py  path_tools.py  paths.py  time_tools.py  web_tools.py
